# AIComm

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindNCCL.cmake
src/: CMakeLists.txt  common.cuh  tensor_parallel_col.cu  tp.cu
src/expert_parallel/: CMakeLists.txt  moe.cu
src/tensor_parallel/: CMakeLists.txt  col_wise.cu  common.cuh  row_wise.cu
